--- a/README
+++ b/README
@@ -5,7 +5,7 @@ otherwise, it forwards the request to the appropriate web server, and sends the 
 If the request is not legal, it sends an error response to the client without sending anything to the server.
 Supported only IPv4 connections.
 
-==submitted files==
+==files==
 1. proxyServer.c - simple HTTP Proxy - the main program
 2. threadpool.c - the code for the threadpool section(handle the threads)
 3. README - description.
